Change background to yellow

--- a/_sass/_default.scss
+++ b/_sass/_default.scss
@@ -1,8 +1,11 @@
 /* =Base */
+
+$primary-color: #a9a9a9;
+
 body {
     font-family: 'Inconsolata', ;
-    color: $iron;
-    background-color: $dorian;
+    color: #ffffff;
+    background-color: #ffff7b;
 }
 
 a {
