Revert "Change background to yellow"
This reverts commit 67e04ad4eff0f2b156f3d0cec71be21da06b7db9.

--- a/_sass/_default.scss
+++ b/_sass/_default.scss
@@ -1,11 +1,8 @@
 /* =Base */
-
-$primary-color: #a9a9a9;
-
 body {
     font-family: 'Inconsolata', ;
-    color: #ffffff;
-    background-color: #ffff7b;
+    color: $iron;
+    background-color: $dorian;
 }
 
 a {
