added Community Workshop page + updated base style

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+    
     <head>
-        <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet"> 
-        <link href="https://fonts.googleapis.com/css?family=Arimo" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Codystar|Knewave|News+Cycle|Unica+One" rel="stylesheet">
         {% include meta_tags/base.html %}
         {% include meta_tags/sharing.html %}
 
