--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,6 +5,7 @@
         <ul class="menu">
             <li class="menu__entry"><a href="{{ '/about' | prepend: site.baseurl }}">About</a></li>
             <li class="menu__entry"><a href="{{ '/' | prepend: site.baseurl }}">Blog</a></li>
+            <li class="menu__entry"><a href="{{ '/communityworkshop' | prepend: site.baseurl }}">Community Workshop</a></li>
         </ul>
     </div>
 
