--- a/_sass/_default.scss
+++ b/_sass/_default.scss
@@ -1,18 +1,16 @@
 /* =Base */
 body {
-    font-family: 'Arimo', sans-serif;
-    color: $iron;
-    background-color: $cloud;
+    font-family: 'News Cycle', sans-serif;
+    color: $moon;
+    background-color: $space;
 }
 
 a {
-    color: $cloudy;
-    font-family: 'Lobster', cursive;
-    font-weight: bold;
+    color: $moon;
     text-decoration: none;
 
     &:hover {
-
+        color: $cactus;
     }
 }
 
@@ -40,7 +38,7 @@ blockquote {
         position: absolute;
         bottom: -35px;
         font-size: 15px;
-        color: $iron;
+        color: $moon;
         letter-spacing: 0px;
         left:0px;
         right: 0px;
@@ -52,7 +50,7 @@ blockquote {
     p {
         display: inline;
         font-size: 20px;
-        color: $cloudy;
+        color: $moon;
         font-weight: 400;
         &:before { content: "“ "; }
         &:after { content: " ”"; }
@@ -60,7 +58,8 @@ blockquote {
 }
 
 strong {
-    color: $iron;
+    font-weight: bold;
+    font-style: underline;
 }
 
 /* =Header */
@@ -70,6 +69,8 @@ strong {
 }
 
 .header {
+    font-family: 'Unica One', cursive;
+    color: $sun;
     overflow: hidden;
 }
 
@@ -80,12 +81,13 @@ strong {
 .logo {
     font-size: 50px;
     font-weight: 700;
-    color: $iron;
+    color: $sun;
     display: block;
 }
 
 .menu {
-    color: $cloudy;
+    color: $moon;
+    font-family: 'News Cycle', sans-serif;
     font-size: 18px;
     margin:0px;
     margin-top: 6px;
@@ -109,7 +111,7 @@ strong {
 .social-links {
     float:right;
     font-size: 24px;
-    color: $cloudy;
+    color: $moon;
     list-style-type: none;
 }
 
@@ -117,6 +119,7 @@ strong {
     display: inline-block;
     margin-left: 10px;
 }
+
 
 /* =Titles */
 .page-title {
@@ -133,7 +136,7 @@ strong {
 .page-title__subtitle {
     font-weight: 400;
     font-size: 22px;
-    color: $cloudy;
+    color: $moon;
 }
 
 .post-title {
@@ -162,27 +165,27 @@ strong {
 
 .post-teaser__title {
     font-size: 22px;
-    color: $iron;
+    color: $moon;
 }
 
 .post-teaser__date {
     font-size: 16px;
     float: right;
     vertical-align: middle;
-    color: $cloudy;
+    color: $moon;
 }
 
 .empty-post-list {
     font-size: 22px;
     font-weight: 700;
-    color: $iron;
+    color: $moon;
     text-align: center;
 }
 
 /* =Explore */
 .explore {
     text-align: center;
-    color: $cloudy;
+    color: $moon;
     margin-top: 140px;
 }
 
@@ -209,13 +212,13 @@ strong {
 }
 
 .categories__item a {
-    color: $iron;
+    color: $moon;
 }
 
 .categories__item:after {
     content: "/";
     margin-left: 6px;
-    color: $cloudy;
+    color: $moon;
 }
 
 .categories__item:last-child:after {
@@ -226,7 +229,7 @@ strong {
 
 /* =Post page */
 .about {
-    color: $cloudy;
+    color: $moon;
     margin-top: 70px;
     text-align: center;
     line-height: 24px;
