--- a/css/main.scss
+++ b/css/main.scss
@@ -6,11 +6,14 @@ sitemap:
 @charset "utf-8";
 
 /* =Colors */
-$dorian: #F5F5F5;
-$iron: #333333;
-$cloudy: #828282;
-$pink: #FFC0CB;
-$cloud: #d0d4d8;
+
+$slate: #547A82;
+$rave: #3EACA8;
+$cactus: #E6EEC3;
+
+$space: #1a1a1a;
+$moon: #F2F2F2;
+$sun: #FFC300;
 
 @import
     "mixins",
