--- a/css/main.scss
+++ b/css/main.scss
@@ -7,13 +7,12 @@ sitemap:
 
 /* =Colors */
 
-$slate: #547A82;
-$rave: #3EACA8;
-$cactus: #E6EEC3;
+$space: #05090F;
+$moon: #E4F6EE;
 
-$space: #1a1a1a;
-$moon: #F2F2F2;
 $sun: #FFC300;
+$neptune: #5764C7;
+$galaxy: #900C3F;
 
 @import
     "mixins",
