--- a/_sass/_default.scss
+++ b/_sass/_default.scss
@@ -235,6 +235,10 @@ strong {
     line-height: 24px;
 }
 
+.img-circle {
+    border-radius: 50%;
+}
+
 .about__devider {
     font-size: 20px;
     margin-bottom: 50px;
