--- a/_includes/page/explore.html
+++ b/_includes/page/explore.html
@@ -1,5 +1,7 @@
 <div class="explore">
     <div class="explore__devider">*****</div>
+    <div class="planet"></div>
+
     <div class="explore__label">Explore the different categories</div>
     <ul class="categories">
         {% for category in site.data.categories %}
