--- a/_sass/_default.scss
+++ b/_sass/_default.scss
@@ -61,6 +61,53 @@ strong {
     color: $neptune;
 }
 
+/* pulsing colorful orb thing */
+.planet {
+  height: 150px;
+  width: 150px;
+  border-radius: 100%;
+  margin: 0 auto;
+  background-color: $galaxy;
+  animation-name: stretch;
+  animation-duration: 3.0s; 
+  animation-timing-function: ease-out; 
+  animation-delay: 0;
+  animation-direction: alternate;
+  animation-iteration-count: infinite;
+  animation-fill-mode: none;
+  animation-play-state: running;
+}
+
+@keyframes stretch {
+  0% {
+    transform: scale(.3);
+    background-color: $space;
+  }
+  33% {
+    background-color: $galaxy;
+  }
+  66% {
+    background-color: $neptune;
+  }
+  100% {
+    transform: scale(1.0);
+    background-color: $space;
+  }
+}
+
+body,
+html {
+  height: 100%;
+}
+
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+/* end colorful orb */
+
+
 /* =Header */
 .wrapper {
     max-width: 800px;
