update colors and fonts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="en">
     
     <head>
-        <link href="https://fonts.googleapis.com/css?family=Codystar|Knewave|News+Cycle|Unica+One" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans+Condensed:300,700" rel="stylesheet">
         {% include meta_tags/base.html %}
         {% include meta_tags/sharing.html %}
 
