--- a/css/main.scss
+++ b/css/main.scss
@@ -10,9 +10,18 @@ sitemap:
 $space: #05090F;
 $moon: #E4F6EE;
 
-$sun: #FFC300;
 $neptune: #5764C7;
 $galaxy: #900C3F;
+
+$gold: #E6CE1D;
+$yellow: #F4DD08;
+$sun: #FDEC00;
+$slate: #403F45;
+$paper: #FFFFFF;
+
+$body: 'Open Sans Condensed', sans-serif;
+$header: 'Lobster', cursive;
+
 
 @import
     "mixins",
