adding Google Analytics code to default layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,18 @@
 <html lang="en">
     
     <head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+ 
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109276377-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            /*global dataLayer*/ 
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'UA-109276377-1');
+        </script>
+
         <link href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans+Condensed:300,700" rel="stylesheet">
         {% include meta_tags/base.html %}
         {% include meta_tags/sharing.html %}
