--- a/css/main.scss
+++ b/css/main.scss
@@ -19,7 +19,8 @@ $sun: #FDEC00;
 $slate: #403F45;
 $paper: #FFFFFF;
 
-$body: 'Open Sans Condensed', sans-serif;
+$body: 'Lato', sans-serif;
+$extra: 'Josefin Slab', serif;
 $header: 'Lobster', cursive;
 
 
