updated headshot on about page

--- a/_sass/_default.scss
+++ b/_sass/_default.scss
@@ -230,7 +230,7 @@ strong {
 }
 
 
-/* =Post page */
+/* =About page */
 .about {
     color: $gold;
     margin-top: 70px;
@@ -240,6 +240,7 @@ strong {
 
 .img-circle {
     border-radius: 50%;
+    max-width: 50%;
 }
 
 .about__devider {
