--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,11 +2,13 @@
     <div class="navigation">
         <a href="/" class="logo">{{ site.title }}</a>
 
+<!-- hiding top nav menu
         <ul class="menu">
             <li class="menu__entry"><a href="{{ '/about' | prepend: site.baseurl }}">ABOUT</a></li>
             <li class="menu__entry"><a href="{{ '/' | prepend: site.baseurl }}">BLOG</a></li>
         </ul>
     </div>
+-->
 
     <ul class="social-links">
         {% if site.author.github %}
