--- a/_includes/page/explore.html
+++ b/_includes/page/explore.html
@@ -1,6 +1,7 @@
+<!-- Hide category tags on the bottom of the page
+
 <div class="explore">
     <div class="explore__devider">*****</div>
-    <!--<div class="explore__label">Explore the different categories</div>-->
     <ul class="categories">
         {% for category in site.data.categories %}
             <li class="categories__item"><a href="{{ '/categories/' | append: category.slug | prepend: site.baseurl }}">{{ category.name }}</a></li>
