create simple landing page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="header">
-    <div class="navigation">
-        <a href="/" class="logo">{{ site.title }}</a>
+<!--    <div class="navigation">
+<!--        <a href="/" class="logo">{{ site.title }}</a>  -->
 
 <!-- hiding top nav menu
         <ul class="menu">
@@ -9,7 +9,7 @@
         </ul>
     </div>
 -->
-
+<!--
     <ul class="social-links">
         {% if site.author.github %}
             <a href="https://github.com/{{ site.author.github }}" class="social-links__entry" target="_blank">
@@ -22,5 +22,5 @@
                 <i class="fa fa-twitter"></i>
             </a>
         {% endif %}
-    </ul>
+    </ul> -->
 </header>
