--- a/_sass/_default.scss
+++ b/_sass/_default.scss
@@ -4,6 +4,7 @@ body {
     font-weight: 300;
     color: $slate;
     background-color: $paper;
+    text-align: left;
 }
 
 a {
@@ -25,7 +26,10 @@ img {
     margin: 40px auto;
     display: block;
     max-width: 100%;
+    text-align: right;
 }
+
+
 
 blockquote {
     letter-spacing: 3px;
@@ -62,6 +66,7 @@ blockquote {
 strong {
     color: $slate;
 }
+
 
 /* =Header */
 .wrapper {
